--- a/config
+++ b/config
@@ -541,7 +541,7 @@ CONFIG_PM_TRACE_RTC=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ACPI=y
 CONFIG_ACPI_SLEEP=y
-# CONFIG_ACPI_PROCFS_POWER is not set
+# CONFIG_ACPI_PROCFS is not set
 CONFIG_ACPI_EC_DEBUGFS=m
 CONFIG_ACPI_AC=m
 CONFIG_ACPI_BATTERY=m
@@ -684,7 +684,7 @@ CONFIG_OLPC_XO1_PM=y
 CONFIG_OLPC_XO1_RTC=y
 CONFIG_OLPC_XO1_SCI=y
 CONFIG_OLPC_XO15_SCI=y
-# CONFIG_ALIX is not set
+CONFIG_ALIX=y
 # CONFIG_NET5501 is not set
 # CONFIG_GEOS is not set
 CONFIG_AMD_NB=y
